# autogen-code-review-bot

./: .bumpversion.cfg  .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .releaserc.json  .releaserc.yml  .secrets.baseline  .yamllint.yaml  ARCHITECTURE.md  AUTONOMOUS_BACKLOG.md  AUTONOMOUS_SDLC_COMPLETE_GUIDE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_DEPLOYMENT_GUIDE.md  AUTONOMOUS_SDLC_DOCUMENTATION.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_GUIDE.md  AUTONOMOUS_SDLC_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_README.md  AUTONOMOUS_SDLC_REPORT.md  AUTONOMOUS_SDLC_TEST_REPORT.json  AUTONOMOUS_SDLC_VALUE_DISCOVERY_IMPLEMENTATION.md  AUTONOMOUS_TEST_ERROR.json  AUTONOMOUS_WORKFLOW.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW.md  COMPREHENSIVE_AUTONOMOUS_SDLC_REPORT.json  COMPREHENSIVE_RESEARCH_COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEVELOPMENT_PLAN.md  Dockerfile  (+81 more)
.autonomous_sdlc/: execution_history.json
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependency-review-config.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: autonomous-dev.yml  ci.yml
.monitoring_data/: metrics_20250827_11.json
.terragon/: autonomous_executor.py  config.yaml  cycle_reports.jsonl  demo.py  learning_metrics.json  scheduler.py  value_discovery.py
DOCS/: autonomous_backlog_system.md  backlog.json  backlog.yml
benchmarks/: README.md  conftest.py  load_test.py  test_performance.py
config/: agents.yaml  enterprise.yaml  production.yaml
deploy/: production_deployment_guide.md
docs/: AUTONOMOUS_EXECUTOR_GUIDE.md  BUILD.md  COMPLIANCE_AUTOMATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  ENTERPRISE_COMPLIANCE.md  ENTERPRISE_SECURITY.md  IMPLEMENTATION_SUMMARY.md  MONITORING.md  PERFORMANCE_OPTIMIZATION.md  QUANTUM_OPTIMIZATION_GUIDE.md  ROADMAP.md  SCALING_ARCHITECTURE.md  SETUP_REQUIRED.md  SRE_PRACTICES.md  SRE_RUNBOOKS.md  WORKFLOW_SETUP_GUIDE.md
docs/adr/: 000-template.md  001-dual-agent-architecture.md  ADR-001-agent-framework-selection.md  README.md
docs/monitoring/: README.md
docs/runbooks/: health-monitoring.md
docs/status/: 2025-07-26.json  autonomous_execution_report_2025_07_26.md
docs/testing/: README.md
docs/workflows/: ADVANCED_CI_CD.md  ADVANCED_RELEASE_AUTOMATION.md  ADVANCED_SECURITY_SCANNING.md  DEPLOYMENT_STRATEGIES.md  ENHANCED_CI_CD_IMPLEMENTATION.md  ENHANCED_SECURITY.md  ENTERPRISE_RELEASE_AUTOMATION.md  ENTERPRISE_WORKFLOWS_IMPLEMENTATION.md  README.md  RELEASE_AUTOMATION.md  SECURITY_AUTOMATION.md
docs/workflows/examples/: cd.yml  (+3 more)
monitoring/: advanced-dashboards.json  blackbox.yml  enterprise-monitoring.yml  enterprise-prometheus.yml  grafana-dashboard.json  health-check-config.yml  health-checks.yml  logging-config.yml  otel-collector-config.yml  prometheus.yml  tracing-config.yml
monitoring/alerts/: autogen-bot-alerts.yml
monitoring/rules/: autogen-bot.yml
nginx/: nginx.conf
research_artifacts/: LARGE_FILES_README.md
scripts/: autonomous_dev.py  build.sh  code_quality_monitor.py  collect_metrics.py  dependency_update.py  docker-security-scan.sh  integration_scripts.py  multi-arch-build.sh  repository_maintenance.py
src/autogen_code_review_bot/: __init__.py  advanced_monitoring.py  advanced_validation.py  agent_conversations.py  agent_templates.py  agents.py  analysis_helpers.py  api_gateway.py  auto_scaling_engine.py  autonomous_backlog.py  autonomous_backlog_json.py  autonomous_executor.py  autonomous_sdlc.py  breakthrough_monitoring_engine.py  breakthrough_performance_optimizer.py  breakthrough_validation_engine.py  caching.py  circuit_breaker.py  cli.py  comprehensive_quality_gates.py  config.py  config_validation.py  consciousness_engine.py  coverage_metrics.py  distributed_cache.py  distributed_processing.py  enhanced_agents.py  enhanced_autonomous_executor.py  enhanced_progressive_quality_gates.py  enhanced_security.py  enhanced_validation.py  enterprise_monitoring.py  enterprise_resilience.py  enterprise_resilience_engine.py  exceptions.py  github_integration.py  global_config.py  global_deployment_engine.py  health_checker.py  intelligent_cache.py  (+40 more)
src/autogen_review_bot/: core.py
tests/: conftest.py  document_multi_language_setup_in_readme.py  load_linter_configuration_from_yaml.py  sprint_acceptance_criteria.json  test_add_language_detection_utility.py  test_agent_conversation.py  test_agent_conversation_integration.py  test_agent_conversations.py  test_agent_templates.py  test_agents.py  test_automatic_metrics_cleanup.py  test_autonomous_backlog.py  test_cache_invalidation.py  test_caching.py  test_cli_entry_points.py  test_code_duplication_refactor.py  test_config_validation.py  test_configuration.py  test_coverage_metrics.py  test_dependency_versions.py  test_enhanced_error_handling.py  test_enterprise_features.py  test_error_handling_standardization.py  test_example_patterns.py  test_file_count_limits.py  test_format_analysis_result.py  test_foundational.py  test_github_api_url_configuration.py  test_github_integration.py  test_github_integration_error_handling.py  test_integrate_language_specific_linters_in_analyze_pr.py  test_large_pr_streaming.py  test_logging_config.py  test_metrics_collection.py  test_metrics_system.py  test_monitoring.py  test_optimized_language_detection.py  test_optional_types_validation.py  test_parallel_processing.py  test_path_traversal_security.py  (+14 more)
tests/contracts/: README.md
tests/e2e/: __init__.py  test_example_e2e.py
tests/fixtures/: README.md
tests/integration/: __init__.py  test_example_integration.py  test_full_workflow.py
tests/performance/: locustfile.py  test_performance.py
tests/security/: __init__.py
tests/unit/: __init__.py  test_example.py
(+8 files in other folders)
